syntax = "proto3";

message Row {
    repeated float attributes = 1;
    int32 label = 2;
}

message FitRequest {
    repeated Row rows = 1;
}

message PredictRequest {
    Row row = 1;
}

message FitResponse {
    float accuracy = 1;
}

message PredictResponse {
    int32 class = 1;
}

service CentralizedMLP {
    rpc GetTrainedModel(FitRequest) returns (FitResponse) {}
    rpc GetPrediction(PredictRequest) returns (PredictResponse) {}
}
